--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<form (ngSubmit)="onSubmitLogin(loginForm)" #loginForm="ngForm">
+  <fieldset>
+    <legend>Login</legend>
+    <div>
+      <label for="user">Email: </label>
+      <input type="text" name="email" [(ngModel)]="user.email" required>
+    </div>
+    <div>
+      <label for="user">Password: </label>
+      <input type="password" name="password" [(ngModel)]="user.password" required>
+    </div>
+    <button type="submit" class="btn btn-sm" [disabled]="!loginForm.valid">Login</button>
+    <p class="error" *ngIf="error">{{ error }}</p>
+  </fieldset>
+</form>
