--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,17 +1,4 @@
-<nav>
-    <div class="btn-group" data-toggle="buttons">
-        <label class="btn-primary" ngbButtonLabel>
-          <input type="checkbox" ngbButton> Login
-        </label>
-        <label class="btn-primary" ngbButtonLabel>
-          <input type="checkbox" ngbButton> Middle
-        </label>
-        <label class="btn-primary" ngbButtonLabel>
-          <input type="checkbox" ngbButton> Right
-        </label>
-      </div>
-      <hr>
-      <pre>{{model | json}}</pre>
-    
-
-</nav>
+<button type="button" class="btn btn-sm" [routerLink]="['/']">Home</button>
+<button *ngIf="!currentUser" type="button" class="btn btn-sm" [routerLink]="['/login']">Login</button>
+<button *ngIf="currentUser" type="button" class="btn btn-sm" (click)="logout()">Logout</button>
+<h5 *ngIf="currentUser">Welcome: {{currentUser.name}}</h5>
