--- a/src/app/components/trip-search/trip-search.component.html
+++ b/src/app/components/trip-search/trip-search.component.html
@@ -1,25 +1,28 @@
+<div class="home">
 <form (ngSubmit)="onSubmitTripSearch(tripSearchForm)" #tripSearchForm="ngForm">
   <fieldset>
-    <legend>Search a trip: </legend>
-    <div>
+    <h2>SEARCH A TRIP </h2>
+    <div class="field">
       <h6>From: </h6>
       <label for="searcher">City: </label>
       <input type="text"  name="fromCity" [(ngModel)]="searcher.fromCity" required>
       <label for="searcher">Country: </label>
       <input type="text" name="fromCountry" [(ngModel)]="searcher.fromCountry" required>
     </div>
-    <div>
+    <div class="field marginTop">
         <h6>To: </h6>
         <label for="searcher">City: </label>
         <input type="text" name="toCity" [(ngModel)]="searcher.toCity" required>
         <label for="searcher">Country: </label>
         <input type="text" name="toCountry" [(ngModel)]="searcher.toCountry" required>
     </div>
-    <div>
-      <label for="searcher">Weight: </label>
+    <div class="field marginTop">
+      <h6>Weight:</h6>
       <input type="number" name="weight" [(ngModel)]="searcher.weight" required>
     </div>
-    <button type="submit" class="btn btn-sm" >Search</button>
+    <button type="submit" >Search</button>
     <p class="error" *ngIf="error">{{ error }}</p>
   </fieldset>
 </form>
+<br>
+</div>
