--- a/src/app/components/user-trip-details/user-trip-details.component.css
+++ b/src/app/components/user-trip-details/user-trip-details.component.css
@@ -1,16 +1,19 @@
+
 .tripInfo {
     width: 310px;
+    background-color: #F5F5DE;
     margin: 10px auto;
     border-style: solid;
     border-color: #073950;
 }
 
-h2 {
-    text-align: center;
-    font-size: 25px;
-}
-
 .textArea {
     padding: 5px;
     background-color: #F5F5DE;
+}
+
+
+.tripButton {
+    width: 310px;
+    margin: 10px auto;
 }
