--- a/src/app/components/top-trips/top-trips.component.html
+++ b/src/app/components/top-trips/top-trips.component.html
@@ -1,4 +1,14 @@
-<ul>
-    <li *ngFor="let trip of trips">{{trip._id}}</li>
-  </ul>
+<h2>UPCOMING TRIPS</h2>
+<div>
+  <div class="tripInfo" *ngFor="let trip of trips">
+    <div class="textArea">
+      <p>From: {{trip.from.city}}</p>
+      <p>To: {{trip.to.city}}</p>
+      <p>Departure Date: {{trip.departureDateTime | date: 'yyyy-MM-dd HH:mm'}}</p>
+      <p>Arrival Date: {{trip.arrivalDateTime | date: 'yyyy-MM-dd HH:mm'}}</p>
+      <a [routerLink]="['/trips', trip._id]">See more...</a>
+    </div>
+
+  </div>
+</div>
   
