--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-size: 16px;
+    color: #073950;
+    font-family: 'Roboto Condensed', sans-serif;
+    background: url(assets/images/background.png) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+      
+}
+input {
+    background-color: #F5F5DE;
+    border-color: #073950; 
+}
+
+button {
+    background-color: #F5F5DE;
+    color: #073950;
+    border-color: #073950; 
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
+  }
