--- a/src/app/components/edit-trip/edit-trip.component.css
+++ b/src/app/components/edit-trip/edit-trip.component.css
@@ -15,3 +15,41 @@
 button {
     margin-left: 7px;
 }
+
+.home {
+    width: 300px;
+    margin: 20px auto;  
+}
+
+input {
+    width: 290px;
+
+}
+.field {
+    margin: 10px auto;
+}
+
+h6 {
+    font-weight: bold;
+    font-size: 21px;
+}
+h2 {
+    text-align: center;
+    font-size: 25px;
+}
+
+.marginTop {
+    margin-top: 20px;
+}
+
+.h6 {
+    font-weight: bold;
+    font-size: 21px;
+}
+
+ss-multiselect-dropdown  {
+
+    background-color: rgb(197, 197, 121);
+    color: #073950;
+    border-color: #073950; 
+}
