--- a/src/app/components/trip-search/trip-search.component.html
+++ b/src/app/components/trip-search/trip-search.component.html
@@ -20,7 +20,7 @@
       <h6>Weight:</h6>
       <input type="number" name="weight" [(ngModel)]="searcher.weight" required>
     </div>
-    <button type="submit" >Search</button>
+    <button class="btn" type="submit" >Search</button>
     <p class="error" *ngIf="error">{{ error }}</p>
   </fieldset>
 </form>
